GNOME Bugzilla – Bug 760667
Private mode dosn't work from the app-menu
Last modified: 2016-01-15 16:46:27 UTC
Trying to open a private-mode window from the app-menu dosn't work. Just from the shell itself (right click on epiphany in the app-picker and choose private window) works for me.
Created attachment 319107 [details] [review] tests: basesink: shows that basesink drops keyframes before segment Test that pushes a keyframe and a deltaunit before segment.start and checks if they are preserved, otherwise the first buffers of the stream would be useless.
Comment on attachment 319107 [details] [review] tests: basesink: shows that basesink drops keyframes before segment Sorry, typo in git-bz
It's a SIGSEGV at:
+ Trace 235902
And: (gdb) print err->message Cannot access memory at address 0x8
d6581d4ce8ca69821485a09c71b8d7530717c2db is the first bad commit commit d6581d4ce8ca69821485a09c71b8d7530717c2db Author: Michael Catanzaro <mcatanzaro@igalia.com> Date: Sat Dec 26 20:47:01 2015 -0600 Enable and placate -Wno-shadow
Thanks for reporting this, Yosef!
The following fix has been pushed: d5e6724 Fix crash starting incognito mode
Created attachment 319118 [details] [review] Fix crash starting incognito mode