Fix crash starting incognito mode

https://bugzilla.gnome.org/show_bug.cgi?id=760667